# familiar-ai-gui

./: README-de.md  README-fr.md  README-ja.md  README-zh-TW.md  README-zh.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
eval/: SUPERVISOR_PROMPT.md  improve.sh
eval/scenarios/: 01_greet_morning.txt  02_what_see.txt  03_idle_tick.txt  04_coding_task.txt  05_emotional.txt  06_long_silence.txt
src/: App.css  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  coding.rs  config.rs  desires.rs  feedback.rs  i18n.rs  lib.rs  main.rs  permissions.rs
src-tauri/src/backend/: anthropic.rs  gemini.rs  kimi.rs  mod.rs  openai.rs
src-tauri/src/tools/: camera.rs  fs.rs  memory.rs  mobility.rs  mod.rs  shell.rs  tapo_audio.rs  tts.rs
src/components/: ChatView.test.tsx  ChatView.tsx  CodeBlock.tsx  PermDialog.tsx  SettingsPanel.tsx  SetupWizard.tsx
