[package]
name = "familiar-gui"
version = "0.1.0"
description = "Familiar AI — an AI that lives with you"
authors = ["lifemate-ai"]
edition = "2021"

[lib]
name = "familiar_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client — for LLM APIs, ElevenLabs, Tuya, ONVIF
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Config paths
dirs = "5"

# Base64 (camera images)
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image processing (JPEG encode/decode for camera snapshots)
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Async channel for streaming responses to frontend
tokio-stream = "0.1"

# UUID for tool call IDs
uuid = { version = "1", features = ["v4"] }

# futures
futures = "0.3"
